# lipl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  rust.yml  tests-linux.yml  tests-osx.yml
src/: app.rs  main.rs  plotting_utils.rs  widget_main_chart.rs  widget_progress_bar.rs  widget_text_output.rs
