[package]
name = "lipl"
version = "0.1.0"
authors = ["robin <yxdunc@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
tui = "0.6.2"
termion = "1.5.3"
linreg = "0.1.3"
cmd_lib = { git = "https://github.com/yxdunc/rust_cmd_lib", rev = "6cf978b546b6a83db437130ab489f2ae9f7edbb5" }
