[package]
name = "lipl"
version = "0.1.0"
authors = ["robin <yxdunc@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/yxdunc/lipl"
repository =  "https://github.com/yxdunc/lipl"
description = "A command line tool to analyse the output over time of custom shell commands."
keywords = ["tui", "plotting", "unix", "cli", "watch"]

[dependencies]
structopt = "0.3"
tui = "0.6.2"
termion = "1.5.3"
linreg = "0.1.3"
cmd_lib = { git = "https://github.com/rust-shell-script/rust_cmd_lib", rev = "9f9cba4b36cdff5f7d7495d998923f1b378cb9c2" }
